--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
     <title>OwenPsycholegalservices</title>
   </head>
-  <body>
+  <body class="bg-dark text-light">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
@@ -36,6 +37,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+
+         <!-- adding navbar button later -->
+        <!--
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
@@ -49,13 +53,17 @@
             </li>
           </ul>
         </div>
+      -->
       </div>
     </nav>
 
     <!-- Learn Sections -->
-    <section id="learn" class="p-5">
+    <section id="learn" class="p-5 bg-dark text-light">
       <div class="container">
         <div class="row align-items-center justify-content-between">
+          <div class="col-md-3">
+            <img src="img\CoverPhoto.jpg" class="img-fluid" alt="Left image description" />
+          </div>
           <div class="col-md">
             <img src="img/fundamentals.svg" class="img-fluid" alt="" />
           </div>
