--- a/About.html
+++ b/About.html
@@ -14,9 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>OwenPsycholegalservices</title>
+    <title>About - OwenPsycholegalservices</title>
     <style>
-      /* Ensuring the body and HTML take the full height for a consistent footer positioning */
       html, body {
         height: 100%;
         margin: 0;
@@ -28,7 +27,17 @@
       }
 
       footer {
-        margin-top: auto; /* Footer stays at the bottom */
+        margin-top: auto;
+      }
+
+      .about-section {
+        color: #fff;
+        padding: 5rem 0;
+      }
+      
+      .about-section img {
+        max-width: 100%;
+        height: auto;
       }
     </style>
   </head>
@@ -63,38 +72,36 @@
       </div>
     </nav>
 
-    <!-- Learn Sections -->
-    <section id="learn" class="p-5 bg-dark text-light" style="margin-top: 80px;">
+    <!-- About Section -->
+    <section class="about-section">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md-3">
-            <img src="img/CoverPhoto.jpg" class="img-fluid" alt="Cover Photo" />
-          </div>
-          <div class="col-md p-5">
-            <h2>Home</h2>
+          <div class="col-md-6">
+            <h2 class="text-white">About</h2>
             <p class="lead">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique deleniti possimus magnam corporis ratione facere!
+                OwenPsycholegalServices is dedicated to providing high-quality
+              and psychological services that bridge the gap between law and mental health.
+              We specialize in evaluations, expert testimony, and support for legal professionals
+              and their clients, ensuring accurate and reliable assessments.
+
+                Our team consists of experienced professionals with expertise in 
+              psychology. We are committed to offering the best services
+              to help navigate the complexities of the legal system. Our mission
+              is to enhance justice by providing comprehensive evaluations and support.
             </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-              reiciendis eius autem eveniet mollitia, at asperiores suscipit
-              quae similique laboriosam iste minus placeat odit velit quos,
-              nulla architecto amet voluptates?
-            </p>
-          </div>
+        </div>
         </div>
       </div>
     </section>
 
     <!-- Footer -->
     <footer class="p-5 bg-dark text-white text-center">
-      <div class="container">
-        <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
-      </div>
-    </footer>
+        <div class="container">
+          <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
+        </div>
+      </footer>
 
-    <!-- Bootstrap JS (Added) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
