--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>OwenPsycholegalservices</title>
+    <title>Contact - OwenPsycholegalservices</title>
     <style>
-      /* Ensuring the body and HTML take the full height for a consistent footer positioning */
       html, body {
         height: 100%;
         margin: 0;
@@ -28,7 +27,26 @@
       }
 
       footer {
-        margin-top: auto; /* Footer stays at the bottom */
+        margin-top: auto;
+      }
+
+      .contact-section {
+        color: #fff;
+        padding: 5rem 0;
+      }
+
+      .contact-section ul {
+        list-style-type: none;
+        padding: 0;
+      }
+
+      .contact-section li {
+        margin-bottom: 10px;
+      }
+      
+      .contact-section img {
+        max-width: 100%;
+        height: auto;
       }
     </style>
   </head>
@@ -63,25 +81,26 @@
       </div>
     </nav>
 
-    <!-- Learn Sections -->
-    <section id="learn" class="p-5 bg-dark text-light" style="margin-top: 80px;">
+    <!-- Contact Section -->
+    <section class="contact-section">
       <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-md-3">
-            <img src="img/CoverPhoto.jpg" class="img-fluid" alt="Cover Photo" />
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Contact Information</h2>
+            <ul>
+              <li><strong>Phone:</strong> +1 (555) 123-4567</li>
+              <li><strong>Fax:</strong> +1 (555) 987-6543</li>
+              <li><strong>Email:</strong> contact@owenpsycholegalServices.com</li>
+              <li><strong>Support Email:</strong> support@owenpsycholegalServices.com</li>
+            </ul>
           </div>
-          <div class="col-md p-5">
-            <h2>Home</h2>
-            <p class="lead">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Similique deleniti possimus magnam corporis ratione facere!
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-              reiciendis eius autem eveniet mollitia, at asperiores suscipit
-              quae similique laboriosam iste minus placeat odit velit quos,
-              nulla architecto amet voluptates?
-            </p>
+          <div class="col-md-6">
+            <h2>Office Hours</h2>
+            <ul>
+              <li><strong>Monday - Friday:</strong> 9:00 AM - 5:00 PM</li>
+              <li><strong>Saturday:</strong> 10:00 AM - 2:00 PM</li>
+              <li><strong>Sunday:</strong> Closed</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -94,7 +113,9 @@
       </div>
     </footer>
 
-    <!-- Bootstrap JS (Added) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+
