--- a/About.html
+++ b/About.html
@@ -38,6 +38,16 @@
       .about-section img {
         max-width: 100%;
         height: auto;
+        border-radius: 8px; /* Optional: Add rounded corners */
+      }
+
+      .about-section .row {
+        display: flex;
+        align-items: center;
+      }
+
+      .about-section .col-md-6 {
+        padding: 2rem;
       }
     </style>
   </head>
@@ -57,17 +67,20 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a href="about.html" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                  <a href="testcontact.html" class="nav-link">testContact</a>
+                </li>
+                <li class="nav-item">
+                  <a href="contact.html" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a href="index.html" class="nav-link">Home</a>
+                </li>
+              </ul>
         </div>
       </div>
     </nav>
@@ -75,21 +88,25 @@
     <!-- About Section -->
     <section class="about-section">
       <div class="container">
-        <div class="row align-items-center justify-content-between">
+        <div class="row">
           <div class="col-md-6">
             <h2 class="text-white">About</h2>
             <p class="lead">
-                OwenPsycholegalServices is dedicated to providing high-quality
-              and psychological services that bridge the gap between law and mental health.
+              OwenPsycholegalServices is dedicated to providing high-quality
+              psychological services that bridge the gap between law and mental health.
               We specialize in evaluations, expert testimony, and support for legal professionals
               and their clients, ensuring accurate and reliable assessments.
 
-                Our team consists of experienced professionals with expertise in 
-              psychology. We are committed to offering the best services
-              to help navigate the complexities of the legal system. Our mission
-              is to enhance justice by providing comprehensive evaluations and support.
+              Our team consists of experienced professionals with expertise in psychology. 
+              We are committed to offering the best services to help navigate the complexities of the legal system. 
+              Our mission is to enhance justice by providing comprehensive evaluations and support.
             </p>
-        </div>
+          </div>
+
+          <!-- Add Image to About Section -->
+          <div class="col-md-6">
+            <img src="img/CoverPhoto.jpg" alt="About OwenPsycholegalServices" class="img-fluid">
+          </div>
         </div>
       </div>
     </section>
@@ -99,9 +116,10 @@
         <div class="container">
           <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
         </div>
-      </footer>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
