--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               <a href="about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
+              <a href="testcontact.html" class="nav-link">testContact</a>
+            </li>
+            <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
