--- a/testcontact.html
+++ b/testcontact.html
@@ -97,7 +97,7 @@
         <h2>Contact Us</h2>
         <p class="lead text-center">We'd love to hear from you! Please fill out the form below and we'll get in touch with you as soon as possible.</p>
 
-        <form action="https://formspree.io/f/xjkkpyvd" method="POST">
+        <form action="https://formspree.io/f/mbllqjbq" method="POST">
             <div class="mb-3">
               <label for="name" class="form-label">Full Name</label>
               <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required />
