--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a href="testcontact.html" class="nav-link">testContact</a>
             </li>
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+              <a href="services.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
