--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,29 +14,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>OwenPsycholegalservices</title>
-    <style>
-      /* Ensuring the body and HTML take the full height for a consistent footer positioning */
-      html, body {
-        height: 100%;
-        margin: 0;
-      }
-
-      body {
-        display: flex;
-        flex-direction: column;
-      }
-
-      footer {
-        margin-top: auto; /* Footer stays at the bottom */
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <title> Owen Psycholegal Services</title>
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-dark text-light d-flex flex-column min-vh-100">
+    <main class="flex-grow-1">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">OwenPsycholegalservices</a>
+        <a href="index.html" class="navbar-brand">Owen Psycholegal Services</a>
 
         <button
           class="navbar-toggler"
@@ -48,20 +34,20 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="testcontact.html" class="nav-link">testContact</a>
-            </li>
-            <li class="nav-item">
-              <a href="services.html" class="nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a href="about.html" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                  <a href="testcontact.html" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a href="services.html" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a href="index.html" class="nav-link">Home</a>
+                </li>
+              </ul>
         </div>
       </div>
     </nav>
@@ -70,9 +56,9 @@
     <section id="learn" class="p-5 bg-dark text-light" style="margin-top: 80px;">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <img src="img/CoverPhoto.jpg" class="img-fluid" alt="Cover Photo" />
-          </div>
+          </div> -->
           <div class="col-md p-5">
             <h2>Home</h2>
             <p class="lead">
@@ -89,11 +75,11 @@
         </div>
       </div>
     </section>
-
+  </main>
     <!-- Footer -->
-    <footer class="p-5 bg-dark text-white text-center">
+    <footer class="footer">
       <div class="container">
-        <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
+        <p class="text-center mb-0">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
       </div>
     </footer>
 
