--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,47 +14,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <title>Contact - OwenPsycholegalservices</title>
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-      }
+    <link rel="stylesheet" href="style.css" 
+    />
 
-      body {
-        display: flex;
-        flex-direction: column;
-      }
-
-      footer {
-        margin-top: auto;
-      }
-
-      .contact-section {
-        color: #fff;
-        padding: 5rem 0;
-      }
-
-      .contact-section ul {
-        list-style-type: none;
-        padding: 0;
-      }
-
-      .contact-section li {
-        margin-bottom: 10px;
-      }
-      
-      .contact-section img {
-        max-width: 100%;
-        height: auto;
-      }
-    </style>
+    <title>Services - OwenPsycholegalservices</title>
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-dark text-light d-flex flex-column min-vh-100">
+    <main class="flex-grow-1">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">OwenPsycholegalservices</a>
+        <a href="index.html" class="navbar-brand">Owen Psycholegal Services</a>
 
         <button
           class="navbar-toggler"
@@ -71,10 +41,10 @@
                   <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                  <a href="testcontact.html" class="nav-link">testContact</a>
+                  <a href="testcontact.html" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a href="contact.html" class="nav-link">Contact</a>
+                  <a href="services.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
                   <a href="index.html" class="nav-link">Home</a>
@@ -84,27 +54,28 @@
       </div>
     </nav>
 
-    <!-- Contact Section -->
-    <section class="contact-section">
+    <!-- Cervices Section -->
+    <section class="contact-section"style="padding-top: 150px;">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Contact Information</h2>
+            <h2>services offered</h2>
             <ul>
-              <li><strong>Phone:</strong> +1 (803) 627-8034 </li>
-              <li><strong>Email:</strong> irina.owen.psyd@gmail.com</li>
+              <li>Competancy evaluations</li>
+              <li>Other evaluations</li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-
+  </main>
     <!-- Footer -->
-    <footer class="p-5 bg-dark text-white text-center">
-      <div class="container">
-        <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
-      </div>
-    </footer>
+ <!-- Footer -->
+ <footer class="footer">
+  <div class="container">
+    <p class="text-center mb-0">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
+  </div>
+</footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
