--- a/testcontact.html
+++ b/testcontact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,54 +14,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Contact - OwenPsycholegalservices</title>
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-      }
-
-      body {
-        display: flex;
-        flex-direction: column;
-      }
-
-      footer {
-        margin-top: auto;
-      }
-
-      .contact-section {
-        color: #fff;
-        padding: 5rem 0;
-      }
-
-      .contact-section h2 {
-        text-align: center;
-        color: white;
-      }
-
-      .contact-section form {
-        max-width: 600px;
-        margin: auto;
-      }
-
-      .contact-section .form-control {
-        background-color: #333;
-        border: 1px solid #555;
-        color: #fff;
-      }
-
-      .contact-section .form-control:focus {
-        border-color: #ccc;
-        box-shadow: none;
-      }
-    </style>
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-dark text-light d-flex flex-column min-vh-100">
+    <main class="flex-grow-1">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">OwenPsycholegalservices</a>
+        <a href="index.html" class="navbar-brand">Owen Psycholegal Services</a>
 
         <button
           class="navbar-toggler"
@@ -78,10 +39,10 @@
                   <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                  <a href="testcontact.html" class="nav-link">testContact</a>
+                  <a href="testcontact.html" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a href="contact.html" class="nav-link">Contact</a>
+                  <a href="services.html" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
                   <a href="index.html" class="nav-link">Home</a>
@@ -92,7 +53,7 @@
     </nav>
 
     <!-- Contact Section -->
-    <section class="contact-section">
+    <section class="contact-section"style="padding-top: 150px;">
       <div class="container">
         <h2>Contact Us</h2>
         <p class="lead text-center">We'd love to hear from you! Please fill out the form below and we'll get in touch with you as soon as possible.</p>
@@ -123,11 +84,24 @@
           
       </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="p-5 bg-dark text-white text-center position-relative">
+    <section class="contact-section">
       <div class="container">
-        <p class="lead">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Contact Information</h4>
+            <ul>
+              <li><strong>Phone:</strong> +1 (803) 627-8034 </li>
+              <li><strong>Email:</strong> irina.owen.psyd@gmail.com</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-center mb-0">Copyright &copy; 2025 OwenPsycholegalServices.LLC</p>
       </div>
     </footer>
 
