--- a/testcontact.html
+++ b/testcontact.html
@@ -22,8 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand">Owen Psycholegal Services</a>
-
+        <a href="index.html" class="navbar-brand fs-2">Owen Psycholegal Services</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,22 +32,23 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
+        
         <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a href="about.html" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                  <a href="testcontact.html" class="nav-link">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a href="services.html" class="nav-link">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
-                </li>
-              </ul>
-        </div>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+              <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+              </li>
+              <li class="nav-item">
+                <a href="services.html" class="nav-link">Services</a>
+              </li>
+              <li class="nav-item">
+                <a href="testcontact.html" class="nav-link">Contact</a>
+              </li>
+            </ul>
+      </div>
       </div>
     </nav>
 
