--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>services offered</h2>
+            <h2>Services Offered</h2>
             <ul>
               <li>Competancy evaluations</li>
               <li>Other evaluations</li>
