--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     <section id="learn" class="p-5 bg-dark text-light" style="margin-top: 80px;">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <!-- <div class="col-md-3">
-            <img src="img/CoverPhoto.jpg" class="img-fluid" alt="Cover Photo" />
-          </div> -->
+       
+          <img src="img/WebsiteSymbol.png" class="img-fluid" alt="Cover Photo" style="width: 50%; height: auto;" />
+
+         
           <div class="col-md p-5">
             <h2>Home</h2>
             <p class="lead">
