--- a/about.html
+++ b/about.html
@@ -59,14 +59,19 @@
           <div class="col-md-6">
             <h2 class="text-white">About</h2>
             <p class="lead">
-              OwenPsycholegalServices is dedicated to providing high-quality
-              psychological services that bridge the gap between law and mental health.
-              We specialize in evaluations, expert testimony, and support for legal professionals
-              and their clients, ensuring accurate and reliable assessments.
+              Dr. Irina Owen is a licensed psychologist specializing in forensic evaluations with youth and adult clients. She received her doctorate from the APA accredited counseling
+              psychology program at Northwest University and completed her APA accredited internship at Southeast Human Service Center in Fargo, North Dakota.
 
-              Our team consists of experienced professionals with expertise in psychology. 
-              We are committed to offering the best services to help navigate the complexities of the legal system. 
-              Our mission is to enhance justice by providing comprehensive evaluations and support.
+              Her areas of forensic evaluation expertise include competency/capacity to stand trial, not guilty by reason of insanity, diminished capacity/sentencing mitigation, civil
+              commitment, juvenile transfer/waiver to adult court, sexual and violence risk assessment (for juveniles and adults), and school threat assessments. She has worked
+              in community and detention settings, including schools, private practice, correctional facilities, and a forensic state hospital.
+              
+              Prior to her forensic work, Dr. Owen worked with court involved youth as a Court Appointed Special Advocate (CASA), and conducted a book club for youth in detention, both
+              through Pierce County Juvenile Court in Washington state. She also sought to improve the lives of military youth and families by facilitating recreational activities for youth on
+              Joint Base Lewis McChord, and completing her doctoral dissertation (Fortifying military relationships through Stronger Families) on the effectiveness of a marriage
+              enrichment seminar program for active duty and veteran couples.
+              
+              A copy of Dr. Owen’s CV is available upon request.
             </p>
           </div>
 
