--- a/services.html
+++ b/services.html
@@ -56,20 +56,33 @@
     </nav>
 
     <!-- Cervices Section -->
-    <section class="contact-section"style="padding-top: 150px;">
+    <section class="contact-section" style="padding-top: 150px;">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <h2>Services Offered</h2>
+            <p>
+              Below is a list of evaluations offered by my office. If you are unsure about the exact type of evaluation services needed for your client, contact me for a complimentary consultation to discuss how I can best meet your needs.
+            </p>
             <ul>
-              <li>Competancy evaluations</li>
-              <li>Other evaluations</li>
+              <li>Competency/capacity to stand trial</li>
+              <li>Not guilty by reason of insanity (NGRI)</li>
+              <li>Diminished capacity and sentencing mitigation</li>
+              <li>Civil involuntary commitment</li>
+              <li>Sexual and violence risk assessment</li>
+            </ul>
+            <h3>Evaluations for Court Involved Juvenile Offenders</h3>
+            <ul>
+              <li>Juvenile transfer/waiver to adult court</li>
+              <li>Sexual violence risk assessment</li>
+              <li>School-based threat assessment</li>
+              <li>Juvenile resentencing/”second look” for life without parole youth</li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-  </main>
+    
     <!-- Footer -->
  <!-- Footer -->
  <footer class="footer">
