added blue and links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css" />
     <title> Owen Psycholegal Services</title>
   </head>
-  <body class="bg-dark text-light d-flex flex-column min-vh-100">
+  <body class="text-light d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="index.html" class="navbar-brand fs-2">Owen Psycholegal Services</a>
 
@@ -54,7 +54,7 @@
     </nav>
 
     <!-- Learn Sections -->
-    <section id="learn" class="p-5 bg-dark text-light" style="margin-top: 80px;">
+    <section id="learn" class="p-5 text-light" style="margin-top: 80px;">
       <div class="container">
         <div class="row align-items-center justify-content-between">
     
@@ -72,7 +72,7 @@
             </p>
             <p>
               I provide clear, concise, and defensible opinions based on sound psychological principles and rigorous methodology, while also prioritizing clear communication and timely service. 
-              To learn more about specific services offered, <a href="#" class="text-info">click here</a>.
+              To learn more about specific services offered, <a href="https://psypact.gov/page/psypactmap" class="text-info">click here</a>.
             </p>
             <p>
               As a PSYPACT provider, Dr. Owen can serve clients in over 40 states and territories via telehealth, 
@@ -82,7 +82,7 @@
               <strong>Authority to Practice Interjurisdictional Telepsychology (APIT)</strong> under the PSYPACT Commission<br>
               E. Passport issued 2/11/21<br>
               Mobility Number #6459<br>
-              *<a href="#" class="text-info">Click here to see participating states</a>
+              *<a href="https://psypact.site-ym.com/general/custom.asp?page=psypactmap&fbclid=IwAR27JskGxikb9-zJaBBFPCp5cmowzgfl8LdEc4tu7wIZYY3TNdiwT36ogHk" class="text-info">Click here to see participating states</a>
             </p>
           </div>
     
