--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Contact - OwenPsycholegalservices</title>
   </head>
-  <body class="bg-dark text-light d-flex flex-column min-vh-100">
+  <body class="text-light d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
