--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <body class="text-light d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="index.html" class="navbar-brand fs-2">Owen Psycholegal Services</a>
 
