--- a/about.html
+++ b/about.html
@@ -25,10 +25,23 @@
     }
 
     .about-section h2 {
-      font-size: 2.5rem;
+      font-size: 2rem; /* smaller heading */
       font-weight: 700;
       color: #0056b3;
       margin-bottom: 1rem;
+      position: relative;
+      padding-bottom: 0.4rem;
+      display: inline-block;
+    }
+    .about-section h2::after {
+      content: '';
+      position: absolute;
+      width: 50px;
+      height: 3px;
+      background-color: #007bff;
+      bottom: 0;
+      left: 0;
+      border-radius: 3px;
     }
 
     .about-section p {
@@ -121,3 +134,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
