--- a/about.html
+++ b/about.html
@@ -79,21 +79,31 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link d-flex justify-content-between align-items-center">
+                Home <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+              </a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link active">About</a>
+              <a href="about.html" class="nav-link d-flex justify-content-between align-items-center active">
+                About <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+              </a>
             </li>
             <li class="nav-item">
-              <a href="services.html" class="nav-link">Services</a>
+              <a href="services.html" class="nav-link d-flex justify-content-between align-items-center">
+                Services <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+              </a>
             </li>
             <li class="nav-item">
-              <a href="testcontact.html" class="nav-link">Contact</a>
+              <a href="testcontact.html" class="nav-link d-flex justify-content-between align-items-center">
+                Contact <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+              </a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    
+
 
     <!-- About Section -->
     <section class="about-section">
