--- a/testcontact.html
+++ b/testcontact.html
@@ -75,36 +75,45 @@
 </head>
 <body class="text-dark d-flex flex-column min-vh-100">
   <main class="flex-grow-1">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top shadow-sm">
-      <div class="container">
-        <a href="index.html" class="navbar-brand fs-3 fw-bold">Owen Psycholegal Services</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navmenu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a href="services.html" class="nav-link">Services</a>
-            </li>
-            <li class="nav-item">
-              <a href="testcontact.html" class="nav-link active">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+   <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top shadow-sm">
+  <div class="container">
+    <a href="index.html" class="navbar-brand fs-3 fw-bold">Owen Psycholegal Services</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navmenu"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navmenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link d-flex justify-content-between align-items-center">
+            Home <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link d-flex justify-content-between align-items-center">
+            About <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="services.html" class="nav-link d-flex justify-content-between align-items-center">
+            Services <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="testcontact.html" class="nav-link active d-flex justify-content-between align-items-center">
+            Contact <span class="d-lg-none"><i class="bi bi-chevron-right ms-2 fs-5"></i></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
     <!-- Contact Form Section -->
     <section class="contact-section">
