--- a/services.html
+++ b/services.html
@@ -20,12 +20,12 @@
       background: #f7f9fc;
       color: #222;
     }
-
+  
     .services-section {
       padding-top: 140px;
       padding-bottom: 60px;
     }
-
+  
     .services-section h2 {
       color: #004085;
       font-weight: 800;
@@ -34,7 +34,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
     }
-
+  
     .services-section p.lead {
       max-width: 700px;
       margin: 0 auto 3rem auto;
@@ -42,7 +42,7 @@
       color: #555;
       text-align: center;
     }
-
+  
     .service-card {
       background: #ffffff;
       border-radius: 12px;
@@ -51,12 +51,12 @@
       margin-bottom: 2.5rem;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-
+  
     .service-card:hover {
       transform: translateY(-8px);
       box-shadow: 0 16px 30px rgb(0 0 0 / 0.15);
     }
-
+  
     .service-card h3 {
       color: #007bff;
       font-weight: 700;
@@ -66,43 +66,31 @@
       text-transform: uppercase;
       letter-spacing: 1px;
     }
-
+  
     ul.service-list {
-      list-style: none;
-      padding-left: 0;
+      list-style-type: disc;
+      padding-left: 1.5rem;
     }
-
+  
     ul.service-list li {
-      position: relative;
-      padding-left: 2.5rem;
       margin-bottom: 0.9rem;
       font-size: 1.05rem;
       color: #333;
       transition: color 0.3s ease;
       cursor: default;
     }
-
-    ul.service-list li::before {
-      content: "\f058"; /* Bootstrap check icon */
-      font-family: "Bootstrap Icons";
-      position: absolute;
-      left: 0;
-      top: 3px;
-      color: #28a745; /* Bootstrap success green */
-      font-size: 1.2rem;
-      line-height: 1;
-    }
-
+  
     ul.service-list li:hover {
       color: #007bff;
     }
-
+  
     /* Footer */
     .footer {
       border-top: 1px solid #ddd;
       background: white;
     }
   </style>
+  
 </head>
 
 <body class="text-dark d-flex flex-column min-vh-100">
