added hyperlink for services and the PSYPACT provider map

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             </p>
             <p>
               I provide clear, concise, and defensible opinions based on sound psychological principles and rigorous methodology, while also prioritizing clear communication and timely service. 
-              <a href="https://psypact.gov/page/psypactmap" class="text-decoration-underline text-primary">Learn more about services</a>.
+              <a href="services.html" class="text-decoration-underline text-primary">Learn more about services</a>.
             </p>
             <p>
-              As a PSYPACT provider, Dr. Owen can serve clients in over 40 states and territories via telehealth, in addition to providing in-person services in South Carolina.
+            <a href="https://psypact.gov/page/psypactmap" class="text-decoration-underline text-primary">As a PSYPACT provider</a>, Dr. Owen can serve clients in over 40 states and territories via telehealth, in addition to providing in-person services in South Carolina.
             </p>
             <p>
               <strong>Authority to Practice Interjurisdictional Telepsychology (APIT)</strong> under the PSYPACT Commission<br />
