cahnged the map to about on the first psypact link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <a href="services.html" class="text-decoration-underline text-primary">Learn more about services</a>.
             </p>
             <p>
-            <a href="https://psypact.gov/page/psypactmap" class="text-decoration-underline text-primary">As a PSYPACT provider</a>, Dr. Owen can serve clients in over 40 states and territories via telehealth, in addition to providing in-person services in South Carolina.
+            <a href="https://psypact.gov/page/About" class="text-decoration-underline text-primary">As a PSYPACT provider</a>, Dr. Owen can serve clients in over 40 states and territories via telehealth, in addition to providing in-person services in South Carolina.
             </p>
             <p>
               <strong>Authority to Practice Interjurisdictional Telepsychology (APIT)</strong> under the PSYPACT Commission<br />
